--- a/note.html
+++ b/note.html
@@ -2,242 +2,159 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Note Editor</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
-body{margin:0;background:#f3f4f6;font-family:system-ui,Arial}
-.wrap{max-width:720px;margin:12px auto;background:#fff;border-radius:10px;box-shadow:0 2px 10px rgba(0,0,0,.1);overflow:hidden}
-.header{padding:12px;border-bottom:1px solid #ddd}
-.header input{width:100%;font-size:16px;padding:10px 12px;border:1px solid #ccc;border-radius:8px}
-
-.tabs{display:flex;justify-content:flex-end;border-bottom:1px solid #ddd}
-.tab{padding:8px 14px;font-weight:600;background:#e5e7eb;color:#555;cursor:pointer}
-.tab.active{background:#fff;color:#dc2626;border-bottom:2px solid #dc2626}
-
-.toolbar{display:flex;gap:6px;padding:8px;border-bottom:1px solid #ddd;overflow-x:auto}
-.toolbar button{background:none;border:none;padding:6px;border-radius:6px}
-.toolbar button:hover{background:#e5e7eb}
-.toolbar svg{width:20px;height:20px;stroke:#111}
-
-.editor{min-height:260px;padding:12px;border:2px solid #2563eb;margin:10px;border-radius:8px;outline:none}
-.editor img{max-width:100%;height:auto;display:block;margin:8px auto;border-radius:6px}
-
-textarea{display:none;width:calc(100% - 20px);height:260px;margin:10px;padding:12px;border-radius:8px}
-
-.footer{display:flex;flex-direction:column;gap:8px;padding:12px;border-top:1px solid #ddd}
-.footer select,.footer input,.footer button{
-  padding:10px;border-radius:8px;border:1px solid #ccc;font-weight:600;width:100%
+*{box-sizing:border-box}
+body{
+  margin:0;
+  background:#0b0f1a;
+  color:#e5e7eb;
+  font-family:system-ui,-apple-system,Segoe UI,sans-serif
 }
-button.publish{background:#dc2626;color:#fff;border:none}
-
-.section{max-width:720px;margin:16px auto;padding:0 6px}
-.card{background:#fff;padding:12px;border-radius:10px;margin-bottom:10px;box-shadow:0 2px 8px rgba(0,0,0,.08);display:flex;justify-content:space-between;gap:10px;align-items:center}
-.card span{font-size:13px;word-break:break-all}
-.card button{padding:6px 10px;border-radius:6px;border:1px solid #ccc;background:#f9fafb;font-weight:600}
-.actions{display:flex;gap:6px;flex-wrap:wrap}
-small{color:#666}
-.danger{background:#fee2e2;border-color:#fecaca;color:#991b1b}
+header{
+  padding:14px;
+  background:#020617;
+  display:flex;
+  gap:8px
+}
+input,select,button{
+  background:#020617;
+  border:1px solid #1e293b;
+  color:#e5e7eb;
+  padding:10px;
+  border-radius:8px
+}
+button{cursor:pointer}
+main{padding:14px}
+#editor{
+  min-height:200px;
+  background:#020617;
+  border:1px solid #1e293b;
+  border-radius:10px;
+  padding:12px;
+  outline:none
+}
+#editor img{max-width:100%;border-radius:8px}
+.history .item{
+  background:#020617;
+  border:1px solid #1e293b;
+  border-radius:10px;
+  padding:10px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  margin-bottom:8px
+}
+.actions button{margin-left:6px}
+.hidden{display:none}
 </style>
 </head>
 
 <body>
 
-<div class="wrap">
-  <div class="header">
-    <input id="title" placeholder="Title">
-  </div>
+<header>
+  <input id="title" placeholder="Judul note">
+  <select id="visibility">
+    <option value="public">Public</option>
+    <option value="private">Private</option>
+  </select>
+  <input id="password" class="hidden" placeholder="Password note">
+  <button onclick="publish()">Generate</button>
+</header>
 
-  <div class="tabs">
-    <div class="tab active" onclick="showEditor()">EDITOR</div>
-    <div class="tab" onclick="showHTML()">HTML</div>
-  </div>
+<main>
+  <div id="editor" contenteditable="true">Tulis catatan di sini...</div>
 
-  <div class="toolbar">
-    <button onclick="cmd('bold')">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-        <path d="M6 4h7a4 4 0 0 1 0 8H6z"/>
-        <path d="M6 12h8a4 4 0 0 1 0 8H6z"/>
-      </svg>
-    </button>
-
-    <button onclick="cmd('justifyLeft')">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-        <line x1="3" y1="6" x2="21" y2="6"/>
-        <line x1="3" y1="12" x2="15" y2="12"/>
-        <line x1="3" y1="18" x2="21" y2="18"/>
-      </svg>
-    </button>
-
-    <button onclick="pickImage()">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-        <rect x="3" y="3" width="18" height="18" rx="2"/>
-        <circle cx="8" cy="8" r="2"/>
-        <path d="M21 15l-5-5L5 21"/>
-      </svg>
-    </button>
-
-    <button onclick="cmd('insertUnorderedList')">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-        <line x1="8" y1="6" x2="21" y2="6"/>
-        <line x1="8" y1="12" x2="21" y2="12"/>
-        <line x1="8" y1="18" x2="21" y2="18"/>
-        <circle cx="4" cy="6" r="1"/>
-        <circle cx="4" cy="12" r="1"/>
-        <circle cx="4" cy="18" r="1"/>
-      </svg>
-    </button>
-
-    <button onclick="cmd('undo')">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-        <path d="M9 14l-4-4 4-4"/>
-        <path d="M20 20a8 8 0 0 0-8-8H5"/>
-      </svg>
-    </button>
-  </div>
-
-  <div id="editor" class="editor" contenteditable="true"></div>
-  <textarea id="html"></textarea>
-
-  <div class="footer">
-    <select id="visibility" onchange="togglePassword()">
-      <option value="public">Public</option>
-      <option value="private">Private</option>
-    </select>
-    <input id="password" placeholder="Password (private)" style="display:none">
-    <button class="publish" onclick="publish()">Publish</button>
-  </div>
-</div>
-
-<div class="section">
-  <h3>Hasil Link</h3>
-  <div id="links"></div>
-</div>
-
-<div class="section">
   <h3>History</h3>
-  <div id="history"></div>
-</div>
-
-<input type="file" id="imgPick" accept="image/*" hidden>
+  <div class="history" id="historyBox"></div>
+</main>
 
 <script>
-const editor=document.getElementById('editor');
-const html=document.getElementById('html');
-const links=document.getElementById('links');
-const historyBox=document.getElementById('history');
-const imgPick=document.getElementById('imgPick');
+/* ================= SUPABASE ================= */
+const supabaseClient = supabase.createClient(
+  "https://reglvenhbvmyqujoydil.supabase.co",
+  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJlZ2x2ZW5oYnZteXF1am95ZGlsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjcyMzc2MDQsImV4cCI6MjA4MjgxMzYwNH0.h-UEIR98TT8TynjraSQi7iwUrnCQ0nLuFJKaHPbOSUc"
+);
 
-let notes=JSON.parse(localStorage.getItem('notes')||'[]');
-let tempLink=null;
-
-function cmd(c){editor.focus();document.execCommand(c,false,null)}
-
-function pickImage(){
-  editor.focus();
-  imgPick.click();
-}
-
-imgPick.onchange=e=>{
-  const f=e.target.files[0];
-  if(!f) return;
-  const r=new FileReader();
-  r.onload=()=>{
-    editor.focus();
-    document.execCommand('insertImage',false,r.result);
-  };
-  r.readAsDataURL(f);
+/* ================= PASSWORD TOGGLE ================= */
+visibility.onchange = ()=>{
+  password.classList.toggle('hidden', visibility.value!=='private');
 };
 
-function showHTML(){
-  html.value=editor.innerHTML;
-  editor.style.display='none';
-  html.style.display='block';
-  setTab(1);
-}
-function showEditor(){
-  editor.innerHTML=html.value;
-  html.style.display='none';
-  editor.style.display='block';
-  setTab(0);
-}
-function setTab(i){
-  document.querySelectorAll('.tab').forEach((t,n)=>t.classList.toggle('active',n===i));
+/* ================= IMAGE PASTE SUPPORT ================= */
+editor.addEventListener('paste',e=>{
+  const items=(e.clipboardData||[]).items;
+  for(const it of items){
+    if(it.type.indexOf('image')!==-1){
+      e.preventDefault();
+      const file=it.getAsFile();
+      const r=new FileReader();
+      r.onload=()=>editor.innerHTML+=`<img src="${r.result}">`;
+      r.readAsDataURL(file);
+    }
+  }
+});
+
+/* ================= PUBLISH ================= */
+function uid(){
+  return Math.random().toString(36).slice(2,10);
 }
 
-function togglePassword(){
-  password.style.display = visibility.value==='private'?'block':'none';
-}
-
-function genID(){return Math.random().toString(36).slice(2,7)}
-
-function publish(){
-  if(html.style.display==='block') editor.innerHTML=html.value;
-
-  const id=genID();
-  notes.unshift({
+async function publish(){
+  const id=uid();
+  const data={
     id,
     title:title.value||'Untitled',
     content:editor.innerHTML,
-    time:new Date().toLocaleString(),
-    visibility:visibility.value,
+    is_private:visibility.value==='private',
     password:password.value||''
-  });
-  localStorage.setItem('notes',JSON.stringify(notes));
+  };
 
-  tempLink=`https://narapoi.pages.dev/v/view.html?id=${id}`;
-  render();
+  await supabaseClient.from('notes').insert(data);
+
+  alert("Note dibuat!");
+  loadHistory();
 }
 
-function deleteNote(id){
-  if(!confirm('Yakin hapus note ini?')) return;
-  notes=notes.filter(n=>n.id!==id);
-  localStorage.setItem('notes',JSON.stringify(notes));
-  tempLink=null;
-  render();
-}
+/* ================= HISTORY ================= */
+async function loadHistory(){
+  const {data}=await supabaseClient
+    .from('notes')
+    .select('id,title,created_at')
+    .order('created_at',{ascending:false});
 
-function loadEdit(id){
-  const n=notes.find(x=>x.id===id);
-  if(!n) return;
-  title.value=n.title;
-  editor.innerHTML=n.content;
-  visibility.value=n.visibility;
-  password.value=n.password||'';
-  togglePassword();
-  tempLink=null;
-  render();
-}
-
-function render(){
-  links.innerHTML='';
   historyBox.innerHTML='';
-
-  if(tempLink){
-    links.innerHTML=`
-      <div class="card">
-        <span>${tempLink}</span>
-        <button onclick="navigator.clipboard.writeText('${tempLink}')">Salin</button>
-      </div>`;
-  }
-
-  notes.forEach(n=>{
+  data.forEach(n=>{
     historyBox.innerHTML+=`
-      <div class="card">
+      <div class="item">
         <div>
           <b>${n.title}</b><br>
-          <small>${n.time}</small>
+          <small>${new Date(n.created_at).toLocaleString()}</small>
         </div>
         <div class="actions">
-          <button onclick="window.open('narapoi.pages.dev/v/view.html?id=${n.id}')">Lihat</button>
-          <button onclick="loadEdit('${n.id}')">Edit</button>
-          <button class="danger" onclick="deleteNote('${n.id}')">Hapus</button>
+          <button onclick="openNote('${n.id}')">View</button>
+          <button onclick="delNote('${n.id}')">Hapus</button>
         </div>
       </div>`;
   });
 }
 
-render();
+function openNote(id){
+  window.open(`view.html?id=${id}`,'_blank');
+}
+
+async function delNote(id){
+  if(!confirm('Hapus note?'))return;
+  await supabaseClient.from('notes').delete().eq('id',id);
+  loadHistory();
+}
+
+loadHistory();
 </script>
+
 </body>
 </html>
