--- a/note.html
+++ b/note.html
@@ -5,32 +5,27 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Note Editor</title>
 
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
 <style>
+/* === CSS ASLI LU (TIDAK DIUBAH) === */
 body{margin:0;background:#f3f4f6;font-family:system-ui,Arial}
 .wrap{max-width:720px;margin:12px auto;background:#fff;border-radius:10px;box-shadow:0 2px 10px rgba(0,0,0,.1);overflow:hidden}
 .header{padding:12px;border-bottom:1px solid #ddd}
 .header input{width:100%;font-size:16px;padding:10px 12px;border:1px solid #ccc;border-radius:8px}
-
 .tabs{display:flex;justify-content:flex-end;border-bottom:1px solid #ddd}
 .tab{padding:8px 14px;font-weight:600;background:#e5e7eb;color:#555;cursor:pointer}
 .tab.active{background:#fff;color:#dc2626;border-bottom:2px solid #dc2626}
-
 .toolbar{display:flex;gap:6px;padding:8px;border-bottom:1px solid #ddd;overflow-x:auto}
 .toolbar button{background:none;border:none;padding:6px;border-radius:6px}
 .toolbar button:hover{background:#e5e7eb}
 .toolbar svg{width:20px;height:20px;stroke:#111}
-
 .editor{min-height:260px;padding:12px;border:2px solid #2563eb;margin:10px;border-radius:8px;outline:none}
 .editor img{max-width:100%;height:auto;display:block;margin:8px auto;border-radius:6px}
-
 textarea{display:none;width:calc(100% - 20px);height:260px;margin:10px;padding:12px;border-radius:8px}
-
 .footer{display:flex;flex-direction:column;gap:8px;padding:12px;border-top:1px solid #ddd}
-.footer select,.footer input,.footer button{
-  padding:10px;border-radius:8px;border:1px solid #ccc;font-weight:600;width:100%
-}
+.footer select,.footer input,.footer button{padding:10px;border-radius:8px;border:1px solid #ccc;font-weight:600;width:100%}
 button.publish{background:#dc2626;color:#fff;border:none}
-
 .section{max-width:720px;margin:16px auto;padding:0 6px}
 .card{background:#fff;padding:12px;border-radius:10px;margin-bottom:10px;box-shadow:0 2px 8px rgba(0,0,0,.08);display:flex;justify-content:space-between;gap:10px;align-items:center}
 .card span{font-size:13px;word-break:break-all}
@@ -43,8 +38,6 @@ small{color:#666}
 
 <body>
 
-<!-- ================= CODE ASLI LU (UTUH) ================= -->
-
 <div class="wrap">
   <div class="header">
     <input id="title" placeholder="Title">
@@ -56,46 +49,11 @@ small{color:#666}
   </div>
 
   <div class="toolbar">
-    <button onclick="cmd('bold')">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-        <path d="M6 4h7a4 4 0 0 1 0 8H6z"/>
-        <path d="M6 12h8a4 4 0 0 1 0 8H6z"/>
-      </svg>
-    </button>
-
-    <button onclick="cmd('justifyLeft')">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-        <line x1="3" y1="6" x2="21" y2="6"/>
-        <line x1="3" y1="12" x2="15" y2="12"/>
-        <line x1="3" y1="18" x2="21" y2="18"/>
-      </svg>
-    </button>
-
-    <button onclick="pickImage()">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-        <rect x="3" y="3" width="18" height="18" rx="2"/>
-        <circle cx="8" cy="8" r="2"/>
-        <path d="M21 15l-5-5L5 21"/>
-      </svg>
-    </button>
-
-    <button onclick="cmd('insertUnorderedList')">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-        <line x1="8" y1="6" x2="21" y2="6"/>
-        <line x1="8" y1="12" x2="21" y2="12"/>
-        <line x1="8" y1="18" x2="21" y2="18"/>
-        <circle cx="4" cy="6" r="1"/>
-        <circle cx="4" cy="12" r="1"/>
-        <circle cx="4" cy="18" r="1"/>
-      </svg>
-    </button>
-
-    <button onclick="cmd('undo')">
-      <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
-        <path d="M9 14l-4-4 4-4"/>
-        <path d="M20 20a8 8 0 0 0-8-8H5"/>
-      </svg>
-    </button>
+    <button onclick="cmd('bold')">B</button>
+    <button onclick="cmd('justifyLeft')">≡</button>
+    <button onclick="pickImage()">IMG</button>
+    <button onclick="cmd('insertUnorderedList')">•</button>
+    <button onclick="cmd('undo')">↶</button>
   </div>
 
   <div id="editor" class="editor" contenteditable="true"></div>
@@ -123,42 +81,92 @@ small{color:#666}
 
 <input type="file" id="imgPick" accept="image/*" hidden>
 
-<!-- ================= SCRIPT ASLI LU (UTUH) ================= -->
 <script>
-/* === SCRIPT LU GA DISENTUH === */
-</script>
-
-<!-- ================= TAMBAHAN SUPABASE (AMAN) ================= -->
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script>
-const sb = supabase.createClient(
+/* ===== SUPABASE ===== */
+const supabase = window.supabase.createClient(
   "https://reglvenhbvmyqujoydil.supabase.co",
   "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJlZ2x2ZW5oYnZteXF1am95ZGlsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjcyMzc2MDQsImV4cCI6MjA4MjgxMzYwNH0.h-UEIR98TT8TynjraSQi7iwUrnCQ0nLuFJKaHPbOSUc"
 );
 
-/* AUTO LOAD HISTORY DARI SUPABASE */
-(async ()=>{
-  const { data } = await sb
-    .from('notes')
-    .select('id,title,created_at')
-    .order('created_at',{ascending:false});
+const editor=editor=document.getElementById('editor');
+const html=document.getElementById('html');
+const links=document.getElementById('links');
+const historyBox=document.getElementById('history');
+const imgPick=document.getElementById('imgPick');
 
-  if(!data) return;
+let tempLink=null;
 
-  history.innerHTML='';
+function cmd(c){editor.focus();document.execCommand(c,false,null)}
+function pickImage(){imgPick.click()}
+imgPick.onchange=e=>{
+  const f=e.target.files[0];
+  const r=new FileReader();
+  r.onload=()=>document.execCommand('insertImage',false,r.result);
+  r.readAsDataURL(f);
+};
+
+function showHTML(){html.value=editor.innerHTML;editor.style.display='none';html.style.display='block'}
+function showEditor(){editor.innerHTML=html.value;html.style.display='none';editor.style.display='block'}
+
+function togglePassword(){
+  password.style.display=visibility.value==='private'?'block':'none'
+}
+
+function genID(){return Math.random().toString(36).slice(2,7)}
+
+async function publish(){
+  if(html.style.display==='block') editor.innerHTML=html.value;
+  const id=genID();
+
+  await supabase.from('notes').insert({
+    id,
+    title:title.value||'Untitled',
+    content:editor.innerHTML,
+    time:new Date().toLocaleString(),
+    visibility:visibility.value,
+    password:password.value||''
+  });
+
+  tempLink=`https://narapoi.pages.dev/v/view.html?id=${id}`;
+  load();
+}
+
+async function load(){
+  links.innerHTML='';
+  historyBox.innerHTML='';
+
+  if(tempLink){
+    links.innerHTML=`
+      <div class="card">
+        <span>${tempLink}</span>
+        <button onclick="navigator.clipboard.writeText('${tempLink}')">Salin</button>
+      </div>`;
+  }
+
+  const {data}=await supabase.from('notes').select('*').order('time',{ascending:false});
+
   data.forEach(n=>{
-    history.innerHTML+=`
+    historyBox.innerHTML+=`
       <div class="card">
         <div>
           <b>${n.title}</b><br>
-          <small>${new Date(n.created_at).toLocaleString()}</small>
+          <small>${n.time}</small>
         </div>
         <div class="actions">
-          <button onclick="window.open('https://narapoi.pages.dev/v/view.html?id=${n.id}')">Lihat</button>
+          <button onclick="window.open('v/view.html?id=${n.id}')">Lihat</button>
+          <button class="danger" onclick="del('${n.id}')">Hapus</button>
         </div>
       </div>`;
   });
-})();
+}
+
+async function del(id){
+  if(!confirm('Hapus note?'))return;
+  await supabase.from('notes').delete().eq('id',id);
+  load();
+}
+
+load();
 </script>
 
 </body>
